Add dependencies.gradle to hold version number for modules

--- a/preference-observable/build.gradle
+++ b/preference-observable/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply from: "$rootDir/dependencies.gradle"
 
 android {
     compileSdkVersion 29
@@ -25,12 +26,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(':preference-core')
-    implementation "androidx.annotation:annotation:1.1.0"
-    implementation "io.reactivex.rxjava3:rxjava:3.0.4"
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.annotation:annotation:${versions.androidxAnnotations}"
+    implementation "io.reactivex.rxjava3:rxjava:${versions.rxjava}"
+    testImplementation "junit:junit:${versions.junit}"
+    testImplementation "org.mockito:mockito-core:${versions.mockito}"
+    androidTestImplementation "androidx.test.ext:junit:${versions.androidxJunit}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${versions.espresso}"
 }
